syntax = "proto3";
package cosmos.accesscontrol.v1beta1;

import "gogoproto/gogo.proto";
import "cosmos/accesscontrol/constants.proto";

option go_package = "github.com/cosmos/cosmos-sdk/x/accesscontrol/types";


message AccessOperation { 
    AccessType access_type  = 1; 
    ResourceType resource_type  = 2; 
    string identifier_template = 3; 
}

message MessageDependencyMapping {
    MessageType message_type = 1;
    string module_name  = 2;
    repeated AccessOperation access_ops = 3 [
        (gogoproto.nullable) = false
    ];
}

message GenesisState {
    Params params = 1 [(gogoproto.nullable) = false];

    // mapping between every message type and its predetermined resource read/write sequence
    repeated MessageDependencyMapping message_dependency_mapping = 2 [
        (gogoproto.nullable) = false,
        (gogoproto.moretags) = "yaml:\"message_dependency_mapping\""
    ];
}

message Params {
    option (gogoproto.goproto_stringer) = false;
  }

